# tg_bot_sina

./: Makefile  pyproject.toml  setup.cfg
bot/: __init__.py  app.py
bot/CRUD/: crud_utils.py  db_util.py
